--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@quasar/extras": "^1.16.4",
     "@supabase/supabase-js": "^2.49.3",
     "axios": "^1.2.1",
+    "date-fns": "^4.1.0",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "register-service-worker": "^1.7.2",
