--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@quasar/extras": "^1.16.4",
     "@supabase/supabase-js": "^2.49.3",
     "axios": "^1.2.1",
+    "bubbles": "file:",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
